# everyday-economy

./: .env.example  .env.staging.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260528_0001_baseline.py  20260528_0002_phase4_user_accounts_watchlist.py  20260528_0003_phase5_alerts_notifications_reports.py  20260528_0004_phase6_admin_operations.py  20260528_0005_phase10_npem_scoring_engine.py  20260529_0006_phase11_beta_feedback.py
apps/api/app/: config.py  database.py  main.py  middleware.py
apps/api/app/api/: deps.py
apps/api/app/connectors/: bank_of_canada.py  bank_of_canada_series.py  oecd.py  statcan.py  world_bank.py
apps/api/app/jobs/: build_leaderboards.py  calculate_baskets.py  calculate_npem.py  evaluate_alerts.py  generate_monthly_reports.py  ingest_statcan.py  refresh_all.py  refresh_indicators.py  seed_reference_data.py
apps/api/app/models/: __init__.py  economic.py
apps/api/app/npem/: __init__.py  variable_dictionary.py
apps/api/app/schemas/: admin.py  alerts.py  common.py  compare.py  dashboard.py  feedback.py  freshness.py  indicators.py  locations.py  npem.py  series.py  user.py
apps/api/app/services/: admin_audit_service.py  admin_service.py  alert_evaluation_service.py  alert_rules_service.py  auth_service.py  compare_service.py  dashboard_service.py  data_quality_service.py  email_service.py  feature_flag_service.py  (+24 more)
apps/api/everyday_economy_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+251 files in other folders)
